Fix the build breakage in M-61 debug build.

Test: Debug build passes.
Bug: 768109
Change-Id: I843deff241fac0de117b6575697a745527a3d86e
Reviewed-on: https://chromium-review.googlesource.com/679376
Reviewed-by: Shu Chen <shuchen@chromium.org>
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503936}
Former-commit-id: bfc521be486382153ebe7a4397ad332b3f1fe8f8