chrome/browser/chromeos/input_method/component_extension_ime_manager_impl.cc
@@ -106,7 +106,8 @@ void DoLoadExtension(Profile* profile,
       GetComponentLoader(profile)->Add(manifest, file_path);
   if (loaded_extension_id.empty()) {
     LOG(ERROR) << "Failed to add an IME extension(id=\"" << extension_id
-               << ", path=\"" << file_path << "\") to ComponentLoader";
+               << ", path=\"" << file_path.LossyDisplayName()
+               << "\") to ComponentLoader";
     return;
   }
   // Register IME extension with ExtensionPrefValueMap.
